infra/networks/ip-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-core-network
  namespace: ip
spec:
  type: ClusterIP
  selector:
    component: ip-core-network
  ports:
    - port: 80
      targetPort: 5000
      name: http
